WV-51: изменена нумерация, возврат json'а и добавлены view'сы для фронта
