# src/db/views/artist.go
@@ -1,0 +1,6 @@
+package views
+
+type Artist struct {
+	Name  string `json:"name" example:"Mercury"`
+	Cover string `json:"cover" example:"assets/artist_1.png"`
+}
