# src/db/views/song.go
@@ -1,0 +1,7 @@
+package views
+
+type Track struct {
+	Title  string `json:"title" example:"Mercury"`
+	Artist string `json:"artist" example:"Hexed"`
+	Cover  string `json:"cover" example:"assets/album_1.png"`
+}
