# src/docs/swagger.json
@@ -1001,9 +1001,9 @@
                     "type": "integer",
                     "example": 15632
                 },
-                "cover": {
-                    "type": "string",
-                    "example": "assets/album_1.png"
+                "coverId": {
+                    "type": "integer",
+                    "example": 254
                 },
                 "id": {
                     "type": "integer",
@@ -1059,9 +1059,9 @@
                     "type": "integer",
                     "example": 15632
                 },
-                "cover": {
-                    "type": "string",
-                    "example": "assets/track_1.png"
+                "coverId": {
+                    "type": "integer",
+                    "example": 254
                 },
                 "duration": {
                     "type": "integer",
@@ -1092,9 +1092,7 @@
         "utils.Success": {
             "type": "object",
             "properties": {
-                "result": {
-                    "type": "string"
-                }
+                "result": {}
             }
         }
     }
